asteria/core/tests/errors/elaboration_errors/cannot_synthesize_type_for_constructor_term.asteriacore
data Unit where
   | MkUnit : Test$Unit()
   ;;

x : Test$Unit()
  = MkUnit(;) Test$x
  ;;
